RuleBasedStrategy (not working just implemented the basics)